SOCINT-427 Code review changes