@@ -6,7 +6,6 @@ import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -85,7 +84,7 @@ public class InteractionService {
 
     return response.stream()
         .sorted(Comparator.comparing(UsersCaseInteractionDTO::getCreatedDateTime).reversed())
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private boolean hasValidSubtype(CaseInteractionRequestDTO dto) {
